testfx/errors/error_tests/edge_42_no_main_var_forward_ref.fx
// 测试：无main时变量前向引用（应该失败）
x := y + 10
y := 5
print(x)
